// Copyright 2024 Signal Messenger, LLC
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package svr2.client;
option go_package = "github.com/signalapp/svr2/proto";
option optimize_for = LITE_RUNTIME;

// Client protocol for SVR4.

message Request4 {
  oneof inner {
    Create create = 1;
    Restore1 restore1 = 2;
    Restore2 restore2 = 3;
    Remove remove = 4;
    Query query = 5;
  }

  message Create {
    uint32 max_tries = 1;
    bytes oprf_keyshare = 2;
    bytes auth_commitment = 3;
    bytes encryption_keyshare = 4;
  }
  message Restore1 {
    bytes element = 1;
  }
  message Restore2 {
    bytes auth_proof = 1;
  }
  message Remove {
  }
  message Query {
  }
}

message Response4 {
  oneof inner {
    Create create = 1;
    Restore1 restore1 = 2;
    Restore2 restore2 = 3;
    Remove remove = 4;
    Query query = 5;
  }

  message Create {
    enum Status {
      UNSET = 0;
      OK = 1;
      INVALID_REQUEST = 2;
      ERROR = 3;
    }
    Status status = 1;
  }

  message Restore1 {
    enum Status {
      UNSET = 0;
      OK = 1;
      MISSING = 2;
      INVALID_REQUEST = 3;
      ERROR = 4;
    }
    Status status = 1;
    bytes element = 2;
    uint32 tries_remaining = 3;
  }

  message Restore2 {
    enum Status {
      UNSET = 0;
      OK = 1;
      MISSING = 2;
      INVALID_REQUEST = 3;
      ERROR = 4;
    }
    Status status = 1;
    bytes oprf_keyshare = 2;
  }

  message Remove {
  }

  message Query {
    enum Status {
      UNSET = 0;
      OK = 1;
      MISSING = 2;
    }
    Status status = 1;
    uint32 tries_remaining = 2;
  }
}
